exports[`test should render a default component 1`] = `
<header
  class="flexHeader">
  <div
    class="flexFill" />
</header>
`;

exports[`test should render a header with all content 1`] = `
<header
  class="flexHeader">
  <div
    class="flexEnd">
    <div>
      start content
    </div>
  </div>
  <div
    class="flexFill">
    <div
      class="titleContainer">
      <h1
        class="title">
        Title
      </h1>
    </div>
  </div>
  <div
    class="flexEnd">
    <div>
      end content
    </div>
  </div>
</header>
`;

exports[`test should render a header with content on the left 1`] = `
<header
  class="flexHeader">
  <div
    class="flexEnd">
    <div>
      start content
    </div>
  </div>
  <div
    class="flexFill" />
</header>
`;

exports[`test should render a header with content on the right 1`] = `
<header
  class="flexHeader">
  <div
    class="flexFill" />
  <div
    class="flexEnd">
    <div>
      end content
    </div>
  </div>
</header>
`;

exports[`test should render a header with title only 1`] = `
<header
  class="flexHeader">
  <div
    class="flexFill">
    <div
      class="titleContainer">
      <h1
        class="title">
        title
      </h1>
    </div>
  </div>
</header>
`;

exports[`test should render a subheader with all content 1`] = `
<header
  class="flexSubheader">
  <div
    class="flexEnd">
    <div>
      start content
    </div>
  </div>
  <div
    class="flexFill">
    <div
      class="titleContainer">
      <h1
        class="title">
        Title
      </h1>
    </div>
  </div>
  <div
    class="flexEnd">
    <div>
      end content
    </div>
  </div>
</header>
`;

exports[`test should render a subheader with title only 1`] = `
<header
  class="flexSubheader">
  <div
    class="flexFill">
    <div
      class="titleContainer">
      <h1
        class="title">
        title
      </h1>
    </div>
  </div>
</header>
`;
